Closed
Bug 1130709
Opened 11 years ago
Closed 11 years ago
build fails with musl libc: __BEGIN_DECLS not defined in media/webrtc/signaling/src/sdp/sipcc
Categories
(Firefox Build System :: General, defect)
Tracking
(firefox40 fixed)
RESOLVED
FIXED
mozilla40
| Tracking | Status | |
|---|---|---|
| firefox40 | --- | fixed |
People
(Reporter: felix.janda, Assigned: felix.janda)
Details
Attachments
(2 files)
|
3.63 KB,
patch
|
bwc
:
review+
|
Details | Diff | Splinter Review |
|
3.70 KB,
patch
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:38.0) Gecko/20100101 Firefox/38.0
Build ID: 20150207112030
Steps to reproduce:
Try to build on a musl libc based system (http://musl-libc.org)
Actual results:
Compile failure in media/webrtc/signaling/src/sdp/sipcc/cpr_string.h because of undefined __BEGIN_DECLS. The files media/webrtc/signaling/src/sdp/sipcc/cpr_*_types.h defines __BEGIN_DECLS, however don't seem to be included in media/webrtc/signaling/src/sdp/sipcc/cpr_types.h because SIP_OS_* is not defined.
| Assignee | ||
Comment 1•11 years ago
|
||
The patch expands __BEGIN_DECLS and __END_DECLS in the 3 places where it is used and removes their definitions from cpr_*_types.h.
If the firefox build system does not export SIP_OS_*, the files cpr_*_types.h might actually be unused.
Updated•11 years ago
|
Component: Untriaged → Build Config
| Assignee | ||
Updated•11 years ago
|
Attachment #8560854 -
Flags: review?(docfaraday)
Comment 2•11 years ago
|
||
Comment on attachment 8560854 [details] [diff] [review]
Proposed patch
Review of attachment 8560854 [details] [diff] [review]:
-----------------------------------------------------------------
::: media/webrtc/signaling/src/sdp/sipcc/cpr_strings.h
@@ +7,3 @@
>
> #include "cpr_types.h"
>
Let's keep the extern "C" stuff here. Otherwise ok.
Do you have try access? If not, I can do a try push once you have a new patch.
Attachment #8560854 -
Flags: review?(docfaraday) → review-
| Assignee | ||
Comment 3•11 years ago
|
||
Thanks for reviewing.
The rationale for leaving out the extern "C" in crp_strings.h is that this header contains only #defines (and no function declarations,...), which are not subject to name mangling.
I don't have try access. Thanks for offering to do a try push for me!
| Assignee | ||
Comment 4•11 years ago
|
||
Comment 5•11 years ago
|
||
(In reply to Felix Janda from comment #3)
> Thanks for reviewing.
>
> The rationale for leaving out the extern "C" in crp_strings.h is that this
> header contains only #defines (and no function declarations,...), which are
> not subject to name mangling.
>
> I don't have try access. Thanks for offering to do a try push for me!
Ahh, I was looking at cpr_string.h and not cpr_strings.h in dxr. My mistake.
Updated•11 years ago
|
Attachment #8560854 -
Flags: review- → review+
Comment 6•11 years ago
|
||
Flags: needinfo?(docfaraday)
Comment 7•11 years ago
|
||
Flags: needinfo?(docfaraday)
Comment 8•11 years ago
|
||
Assignee: nobody → felix.janda
Status: UNCONFIRMED → RESOLVED
Closed: 11 years ago
status-firefox40:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 40
Comment 9•11 years ago
|
||
Mistakenly filed against Firefox 38 and should be instead 38 Branch. Sorry for the spam. dkl
Version: Firefox 38 → 38 Branch
Updated•7 years ago
|
Component: Build Config → General
Product: Firefox → Firefox Build System
Updated•7 years ago
|
Target Milestone: Firefox 40 → mozilla40
You need to log in
before you can comment on or make changes to this bug.
Description
•