Bug 1130709: Make __BEGIN_DECLS and __END_DECLS explicit r=bwc

--HG--
extra : rebase_source : 121e13410be1f60a135227f9f60ad98b7c7d62d4